# cpp-example-project

./: .gitignore  .travis.yml  CMakeLists.txt  TODO.txt
app/: CMakeLists.txt
app/cmake/: compile_flags.cmake
app/src/: main.cpp
cmake/: compile_flags.cmake  find_package_subproject.cmake
lib/: CMakeLists.txt
lib/cmake/: foo-config.cmake.in
lib/include/foo/: bar.hpp
lib/src/: bar.cpp
